// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`will alias tables which have a schema 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`foobar\`.\`Foo\` as \`$0\`
	where
	  \`$0\`.\`color\` = 'red'
`;

exports[`will join using function 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`Foo\`
	  inner join \`Bar\` on \`Bar\`.\`name\` <> \`Foo\`.\`name\`
	  and \`Bar\`.\`color\` = \`Foo\`.\`color\`
	where
	  \`Foo\`.\`name\` <> 'Danny'
	  and \`Bar\`.\`rating\` > 50
`;

exports[`will join using object 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`Foo\`
	  inner join \`Bar\` on \`Bar\`.\`color\` = \`Foo\`.\`color\`
	  inner join \`Baz\` on \`Baz\`.\`rating\` = \`Bar\`.\`rating\`
	where
	  \`Foo\`.\`name\` <> 'Danny'
	  and \`Bar\`.\`rating\` > 50
	  and \`Baz\`.\`color\` = 'blue'
`;
